--- a/src/Components/ContactForm/ContactForm.scss
+++ b/src/Components/ContactForm/ContactForm.scss
@@ -5,27 +5,6 @@
   align-items: flex-end;
 }
 
-.form_input {
-  font-size: 18px;
-  margin-left: 10px;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-  transition: 0.3s;
-}
-
-.form_input:focus,
-.form_input:hover {
-  box-shadow: 0 0 0 3px teal;
-  transition: 0.3s;
-}
-
-.input_label {
-  font-size: 18px;
-  padding: 5px 0px;
-  font-weight: 600;
-}
-
 .submit_button {
   padding: 5px 10px;
   font-size: 16px;
@@ -35,6 +14,17 @@
   margin-top: 10px;
   background-color: teal;
   transition: 0.3s;
+}
+
+.contactform_input {
+  font-size: 18px;
+  margin-left: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  transition: 0.3s;
+  width: 250px;
+  height: 25px;
 }
 
 .submit_button:hover {
