--- a/src/Components/ContactList/ContactList.scss
+++ b/src/Components/ContactList/ContactList.scss
@@ -1,9 +1,9 @@
 .contact_list {
   display: flex;
   flex-direction: column;
-
   justify-content: space-around;
   align-items: flex-end;
+  margin-top: -40px;
 }
 
 .contact_item {
