--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,3 +1,9 @@
+html {
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
   background-image: url(../images/Main_Image_Phone_qnoyq0.jpeg);
   background-repeat: no-repeat;
